feat: migrate to ebean orm jakarta.persistance